--- a/src/main/resources/Dockerfile
+++ b/src/main/resources/Dockerfile
@@ -1,4 +1,14 @@
-FROM ubuntu:latest
-LABEL authors="DELL"
+# ===== BUILD STAGE =====
+FROM maven:3.9.9-eclipse-temurin-21 AS build
+WORKDIR /app
+COPY pom.xml .
+RUN mvn dependency:go-offline
+COPY src ./src
+RUN mvn clean package -DskipTests
 
-ENTRYPOINT ["top", "-b"]
+# ===== RUN STAGE =====
+FROM eclipse-temurin:21-jre
+WORKDIR /app
+COPY --from=build /app/target/*.jar app.jar
+EXPOSE 8080
+ENTRYPOINT ["java","-jar","/spring_boot_app_ci_cd.jar"]
